--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,12 @@
 
 buildscript {
     repositories {
-        maven { url 'http://repo1.maven.org/maven2' }
-        google()
+        jcenter()
     }
     dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.google.gms:google-services:3.1.0'
-        classpath 'com.android.tools.build:gradle:3.0.1'
-
+        classpath 'com.google.gms:google-services:3.1.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,6 +16,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
     }
 }
 
